CHANGES IN VERSION 0.99.6
-------------------------

  o Use BiocFileCache to download sample files.
  o Use tempdir() for demo purposes both in vignette and examples.
  o  Added inst\scripts to describe how the sample data was generated.

CHANGES IN VERSION 0.99.6
-------------------------

  o Delete downloaded and intermediate folders when building vignette.
  o Added `UMI4Cats_index` to .Rbuildignore to prevent ERRORs and
    WARNINGs in BioCCheck.

CHANGES IN VERSION 0.99.5
-------------------------

  o Increased speed of `getViewpointCoordinates()` by allowing pre-selection
    of viewpoint chromosome using `sel_seqname` argument.
  o Added reduced fastq files in extdata and allow downloading of reduced
    bowtie index to increase vignette building speed.

CHANGES IN VERSION 0.99.4
-------------------------

  o Added `.Rproj` files to .gitignore

CHANGES IN VERSION 0.99.3
-------------------------

  o Changed example in vignette and manuals to *CIITA*.
  o Added viewpoint name in `plotTrend()`.
  o Improved multi-panel plotting of `plotUMI4C()`.

CHANGES IN VERSION 0.99.2
-------------------------

  o Allow `ref_umi4c` to be used as reference for plotting colors, domainogram
    and differential analysis (not only for normalization).
  o Fixed error when using `sampleID` as `grouping` variable in `makeUMI4C()`.
  o Fixed bug in `results()` when `fomat=data.frame` and `ordered=TRUE`.
  o Improved visualization of differential regions reconverting `Inf` and `-Inf`
    to maximum and minimum (respectively) odd's ratio values.
  o Add more functionality details in the `Analyzing UMI-4C data with UMI4Cats`
    vignette.

CHANGES IN VERSION 0.99.1
-------------------------

  o Fixed error in function `createGeneAnnotation` and `plotGenes` that occurs
    when there are no genes in the region or a gene has multiple identifiers.
  o  Fixed duplicated generics definition for `SummarizedExperiment` objects to
    avoid error when reloading the package.