@@ -22,9 +22,10 @@ It creates the \code{output_dir} with the example UMI-4C files used
 Downloads the required UMI4Cats example datasets.
 }
 \examples{
-## Use subsample of data to make example faster.
-## Remove `reduced=TRUE` or set to `FALSE` to
-## download full dataset
+# Using reduced data data to make example faster.
+# Remove reduced=TRUE or set to FALSE to
+# download the full dataset.
 
 path <- downloadUMI4CexampleData(reduced = TRUE)
+
 }
